--- a/alpha/home/templates/base-with-advertising.html
+++ b/alpha/home/templates/base-with-advertising.html
@@ -9,6 +9,15 @@
     </div>
 {% endblock%}
 
+{% block advertising_header %}
+    <div class="header-ads-wrapper">
+        <div class="header-ads-container">
+            {% advertising "728x90" %}
+        </div>
+        <div class="clr"></div>
+    </div>
+{% endblock %}
+
 {% block advertising_footer %}
     <div class="footer-ads-wrapper">
         <div class="footer-ads-container">
