--- a/alpha/event/assets/styles/event/similar-events.css
+++ b/alpha/event/assets/styles/event/similar-events.css
@@ -8,6 +8,7 @@
     background: #022e52;
     color: #fff;
     padding: 4px 4px 4px 0;
+    height: 280px;
 }
 
 .secondary-content .similar-events-wrapper header{ 
