--- a/alpha/event/templates/events/_search_pad_event_details.html
+++ b/alpha/event/templates/events/_search_pad_event_details.html
@@ -188,7 +188,7 @@
 
 <div class="entry-navigation-np">
     <p>
-        Total search numbers found ({{ eventsFilter.qs.count }})
+        Total search numbers{% if location_name %} for "{{ location_name }}",{% endif %} ({{eventsFilter.qs.count}})
     </p>
     <p>
         <ul>
