fixing error with advertising editing

--- a/alpha/venues/templates/venue_accounts/public_venue_account.html
+++ b/alpha/venues/templates/venue_accounts/public_venue_account.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'base-with-advertising.html' %}
 {% load date_formatting %}
 {% load advertising_tags %}
 {% load gears %}
