--- a/alpha/venues/assets/styles/venues/edit-venue.css
+++ b/alpha/venues/assets/styles/venues/edit-venue.css
@@ -408,3 +408,20 @@
 .social-links-field .social-link .icon-remove:hover {
     color: red;
 }
+
+.venue-account-venue-name {
+    font-size: 13px;
+    font-weight: bold;
+    color: #333333;
+    padding-top: 5px;
+}
+
+.venue-account-location-actions {
+    padding-bottom: 10px;
+}
+
+.venue-account-location-actions a {
+    font-size: 12px;
+    font-weight: normal;
+    text-decoration: underline;
+}
