--- a/alpha/venues/templates/venue_accounts/new_venue_account.html
+++ b/alpha/venues/templates/venue_accounts/new_venue_account.html
@@ -13,7 +13,7 @@
 
                 <br />
 
-                or <a href="javascript: void" class="switch-to-suggestion">
+                or <a href="javascript: void(0);" class="switch-to-suggestion">
                     you can suggest new venue
                 </a>
             </div>
