--- a/alpha/home/templates/base.html
+++ b/alpha/home/templates/base.html
@@ -102,7 +102,7 @@
                                 </li>
                                 <li class="last">
                                     <a href="https://www.facebook.com/cityfusion.ca" target="_blank" class="footer-icon facebook"></a>
-                                    <a href="http://www.twitter.com/cityfusion_ca" target="_blank" class="footer-icon twitter"></a>
+                                    <a href="http://www.twitter.com/cityfusionca" target="_blank" class="footer-icon twitter"></a>
                                     <a href="mailto:info@cityfusion.ca" class="footer-icon email"></a>
                                     <a href="https://plus.google.com/115070192756503195680"
                                        target="_blank"
