--- a/alpha/home/templates/base.html
+++ b/alpha/home/templates/base.html
@@ -13,6 +13,8 @@
         <meta name="description" content="" />
     {% endblock meta %}
 
+    <link rel="shortcut icon" href="{{ STATIC_URL }}images/favicon.ico"/>
+
     {% css_asset_tag 'base-combine.css' %}
     
     <!--[if IE 7]>
