move favicon to the root

--- a/alpha/home/templates/base.html
+++ b/alpha/home/templates/base.html
@@ -13,7 +13,7 @@
         <meta name="description" content="" />
     {% endblock meta %}
 
-    <link rel="shortcut icon" href="{{ STATIC_URL }}images/favicon.ico"/>
+    <link rel="shortcut icon" href="/favicon.ico" />
 
     {% css_asset_tag 'base-combine.css' %}
     
