adding mass venues transferring

--- a/alpha/cityfusion_admin/templates/cf-admin/event_mass_transfer.html
+++ b/alpha/cityfusion_admin/templates/cf-admin/event_mass_transfer.html
@@ -26,6 +26,9 @@
                     <td>
                         <a href="{% url 'change_venue_owner_search' %}"><span>Venue owner</span></a>
                     </td>
+                    <td>
+                        <a href="{% url 'mass_venue_transfer' %}"><span>Mass venue transferring</span></a>
+                    </td>
                 </tr>
             </table>
             <div class="box visible options">
