changing FB import access

--- a/alpha/accounts/templates/accounts/_account_events_table.html
+++ b/alpha/accounts/templates/accounts/_account_events_table.html
@@ -38,6 +38,11 @@
                 Due to limitations of Facebook, you may wish to adjust your event in Facebook. If Facebook fixes these issues we will incorporate them. eg: event location and Event photo.
             </p>
         </div>
+        <a href="{% url 'import_facebook_events' %}"
+           target="_blank"
+           class="button events-actions-row__fb_import">
+            Import from Facebook
+        </a>
     </div>
     <div class="select-buttons">
         <a href="javascript:void(0);"
