--- a/alpha/accounts/templates/userena/profile_form.html
+++ b/alpha/accounts/templates/userena/profile_form.html
@@ -65,6 +65,12 @@
                         </td>
                     </tr>
                     <tr>
+                        <td>
+                            <label for="id_fb_pages">FB pages:</label>
+                        </td>
+                        <td>{{ form.fb_pages }}</td>
+                    </tr>
+                    <tr>
                         <td colspan="2">
                             <fieldset>
                                 {{ form.tax_origin_confirmed }}
