--- a/alpha/cityfusion_admin/templates/cf-admin/import_facebook_events.html
+++ b/alpha/cityfusion_admin/templates/cf-admin/import_facebook_events.html
@@ -23,6 +23,7 @@
     <script src="{{STATIC_URL}}js/select2.min.js" type="text/javascript"></script>
     <script src="{{STATIC_URL}}js/actions/import-facebook-events.js" type="text/javascript"></script>
     <script type="text/javascript" src="/facebook-for-turbolinks.js"></script>
+    <script src="{{STATIC_URL}}js/searchpad/jquery.qap_dropdown.js" type="text/javascript"></script>
 
     {% include 'variables.html' %}
 
@@ -115,11 +116,22 @@
         <div class="box visible options">
             <div class="form-block" data-id="form_block">
                 <p>
-                    <input type="hidden" class="bigdrop city-input" value=""
-                           data-ajax-url="{% url 'admin_location_autocomplete' %}"
-                           data-id="city_input" />
-                    AND/OR
-                    <input type="text" class="modern-input" placeholder="Facebook page url" data-id="fb_page_url" />
+                    {% if is_admin %}
+                        <input type="hidden" class="bigdrop city-input" value=""
+                               data-ajax-url="{% url 'admin_location_autocomplete' %}"
+                               data-id="city_input" />
+                        AND/OR
+                        <input type="text" class="modern-input" placeholder="Facebook page url" data-id="fb_page_url" />
+                    {% else %}
+                        <div class="dropdown fb-pages-dropdown"
+                             data-dropdown-class="fb-pages-dropdown-options">
+                            <select autocomplete="off" data-id="fb_page_url">
+                                {% for fb_page in fb_pages %}
+                                    <option value="{{ fb_page }}">{{ fb_page }}</option>
+                                {% endfor %}
+                            </select>
+                        </div>
+                    {% endif %}
                     <input class="events-search-button" type="button" value="Search" data-id="search_button" />
                 </p>
                 <input type="hidden" value="" data-id="city_name" />
