fixing some points of FB importing

--- a/alpha/cityfusion_admin/templates/cf-admin/base.html
+++ b/alpha/cityfusion_admin/templates/cf-admin/base.html
@@ -70,7 +70,9 @@
         <div class="page-container {{ page_type }}">
             <div class="content-wrapper">
                 <h1>
-                    Cityfusion Admin
+                    {% block admin_title %}
+                        Cityfusion Admin
+                    {% endblock %}
                 </h1>
                 {% block page %}{% endblock %}
             </div>
